fix: some contrast theme issues

--- a/src/assets/styles/components/_card.css
+++ b/src/assets/styles/components/_card.css
@@ -10,7 +10,7 @@
 }
 
 .card:has(a:focus) {
-    border: 0.1875rem solid transparent;
+    border: 0.1875rem solid var(--fl-fgColor, transparent);
     box-shadow: 0 0.625rem 1.25rem 0 var(--shadow-light);
     outline: 0.1875rem solid var(--fl-fgColor, transparent);
     outline-offset: 0.1875rem;
@@ -39,7 +39,7 @@
 }
 
 .card__content {
-    border: 0.1875rem solid var(--fl-bgColor, transparent);
+    border: 0.1875rem solid var(--fl-fgColor, transparent);
     background-color: var(--fl-bgColor, white);
     display: flex;
     flex-direction: column;
