--- a/src/assets/styles/components/_project-panel.css
+++ b/src/assets/styles/components/_project-panel.css
@@ -24,7 +24,7 @@ div:has(.project-panel) {
 }
 
 .project-panel:has(a:focus) {
-    border: 0.1875rem solid transparent;
+    border: 0.1875rem solid var(--fl-fgColor, transparent);
     box-shadow: 0 0.625rem 1.25rem 0 var(--shadow-light);
     outline: 0.1875rem solid var(--fl-fgColor, transparent);
     outline-offset: 0.1875rem;
@@ -80,7 +80,7 @@ div:has(.project-panel) {
 
 .project-panel__content {
     background-color: var(--fl-bgColor, white);
-    border: 0.1875rem solid var(--fl-bgColor, transparent);
+    border: 0.1875rem solid var(--fl-fgColor, transparent);
     display: flex;
     flex-direction: column;
     justify-content: center;
